<resources>
    <string name="app_name">ApiGuideDemo</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Api Guide</string>
    <string name="nav_header_subtitle">developer.android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--main menu -->
    <string name="guide_connectivity">Connectivity</string>
    <string name="guide_activities">Activity</string>
    <string name="guide_intent">Intent and Intent filters</string>
    <string name="guide_user_interface"><![CDATA[User Interface & Navigation]]></string>
    <string name="guide_image"><![CDATA[Image & Graphics]]></string>
    <string name="guide_background_tasks">Background Tasks</string>
    <string name="guide_recycler">RecyclerView</string>
    <string name="touch_input"><![CDATA[Touch & Input]]></string>

    <!-- UI and Navigation -->
    <string name="ui_nav_custom_view">CustomView</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <string name="keep_tapping">keep tapping.</string>
    <string name="done">done!</string>

    <string name="clipping">cut</string>
    <string name="skewed">skewed and</string>
    <string name="translated">translated text</string>


    <string name="cat_bottomappbar_3d">3D</string>
    <string name="cat_bottomappbar_accelerator">Accelerator</string>
    <string name="cat_bottomappbar_search">Search</string>
    <string name="cat_bottomappbar_dashboard">Dashboard</string>

    <!--    core topic: Touch and Input       -->
    <string name="touch_and_input_overview">Touch and Input overview</string>
    <string name="touch_input_content">The following pages cover everything about user input, from basic touch input and gestures, to keyboards and game controllers. You can add conventient features such as copy/paste and spell checking to your app, and develop your own text services to offer custom keyboards (Input Method Editors), dictionaries, and spelling checkers that you can distribute to users as applications.</string>
    <string name="input_events_overview">Input Events Overview</string>
    <string name="use_touch_gesture">Use touch gesture</string>

    <!--   interface study -->
    <string name="hello_Views">Hello Views</string>

</resources>
