<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activities"
            android:title="@string/guide_activities" />
        <item
            android:id="@+id/nav_intents"
            android:title="@string/guide_intent" />
        <item
            android:id="@+id/nav_user_interface"
            android:title="@string/guide_user_interface" />
        <item
            android:id="@+id/nav_connectivity"
            android:title="@string/guide_connectivity" />
        <item
            android:id="@+id/nav_image"
            android:title="@string/guide_image" />
        <item
            android:id="@+id/nav_background_tasks"
            android:title="@string/guide_background_tasks" />
        <item
            android:id="@+id/nav_recycler"
            android:title="@string/guide_recycler" />
        <item
            android:id="@+id/nav_touch_input"
            android:title="@string/touch_input"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"

                android:title="Share" />
            <item
                android:id="@+id/nav_send"

                android:title="Send" />
        </menu>
    </item>

</menu>
